an actual competent developer who knows what they're doing,  which is a rare
sight in the unblocked games world.  The current competition is dominated by
people who don't  have a clue  what they're doing and use ChatGPT to  "code"
their infrastructure. No Name Games has and will stay on top of the competi-
tion.
==================================CHANGELOG=================================
09/24/2025:
[!] Hey everyone! I really do appreciate all the support I've been getting
recently. It means a lot!
[+] Added Stickman Hook (Thanks for the suggestion Enrique)
[+] Added Monkey Mart (Thanks for the suggestion Enrique)
[+] Fixed Mike Tyson's Punch Out!!
[+] Fixed Papa's Burgeria
[+] Added the other Papa's games (Bakeria, Cheeseria, Cupcakeria, Donuteria,
Freezeria, Hot Doggeria, Pancakeria, Pastaria, Pizzeria, and Scooperia)
[+] Fixed Acid Bunny (Thanks for the bug report)

09/23/2025:
[!] First off I'd like to start by saying some of you don't understand what
Unmonitored Google does. Unmonitored Google just makes what you search not
traceable to your Google account. It does NOT unblock sites and will most
likely not work if you open a website on it.
[!] I also noticed a lot of you really want proxies. I *may* do this in
the future, but for right now this isn't 100% planned.
[!] I really appreciate all the feedback and bug reports you guys are
submitting, it really does help. (:
[+] Added Mike Tyson's Punch-Out!! (Thanks for the suggestion Fart)
[+] Added SUPER PUNCH OUT!! (Thanks for the suggestion Fart)
[+] Added Funny Shooter (Thanks for the suggestion)
[+] Added Call of Duty: World at War (Thanks for the suggestion)
[+] Added Call of Duty: Modern Warfare 3: Defiance (Thanks for the 
suggestion)
[-] Removed Vex 4 & Vex 5 due to it being broken. Might re-add it later.
(Thanks for the bug report Gigi)
[-] Removed Short Life 2 due to it being broken. Might re-add it later.
(Thanks for the bug report Johnathon)

09/21/2025: