@@ -1,10 +1,10 @@
-09/24/2025:
-[!] Hey everyone! I really do appreciate all the support I've been getting
-recently. It means a lot!
-[+] Added Stickman Hook (Thanks for the suggestion Enrique)
-[+] Added Monkey Mart (Thanks for the suggestion Enrique)
-[+] Fixed Mike Tyson's Punch Out!!
-[+] Fixed Papa's Burgeria
-[+] Added the other Papa's games (Bakeria, Cheeseria, Cupcakeria, Donuteria,
-Freezeria, Hot Doggeria, Pancakeria, Pastaria, Pizzeria, and Scooperia)
-[+] Fixed Acid Bunny (Thanks for the bug report)
+09/27/2025:
+[!] Hey! I'm probably going to take a small break from adding suggestions.
+It's been getting a little much, suggestion form will still be up but I'm
+probably going to slow down and work on some other features and bugs first.
+I appreciate all the suggestions though! It's just with all the new users
+and everything it's been getting a little much, I'm a solo developer after
+all.
+[+] Fixed Talking Angela (Thanks for the bug report Jonathon)
+[-] Removed Moto X3M & Moto X3M Winter due to them being broken. Will
+re-add when I decide to fix them. (Thanks for the bug report zekes37)
