@@ -785,7 +785,7 @@
         "img": "supersmashflash2.jpg"
     },
     "Talking Angela": {
-        "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/other/credgames/talkingangela.xml",
+        "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/other/credgames/talkingangela_2.xml",
         "img": "talkingangela.jpg"
     },
     "Talking Tom": {
